@@ -1,63 +1,63 @@
-// Source: https://www.hackerrank.com/challenges/between-two-sets/problem?isFullScreen=true
+// https://www.hackerrank.com/challenges/between-two-sets/problem?isFullScreen=true
+// From Java 21
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Scanner;
 import java.util.stream.Stream;
+
 import static java.util.stream.Collectors.toList;
 
-public class Solution {
+public class Main {
     private static Scanner scan;
 
     public static void main(String[] args) {
         scan = new Scanner(System.in);
 
-        readIntArray();
-        List<Integer> setA = readIntArray();
-        List<Integer> setB = readIntArray();
+        final int n = 2;
+        List<Integer> temp = readIntArray(n);
+        List<Integer> setA = readIntArray(temp.getFirst());
+        List<Integer> setB = readIntArray(temp.getLast());
 
         Collections.sort(setA);
         Collections.sort(setB);
 
-        var result = new BetweenTwoSets(setA, setB);
-        System.out.println(result.totalFactors());
+        var obj = new BetweenTwoSets(setA, setB);
+        obj.findFactors();
+        System.out.print(obj.totalFactors());
     }
 
-        private static List<Integer> readIntArray() {
-            return Stream.of(scan.nextLine().split(" "))
-                   .map(Integer::parseInt)
-                   .collect(toList());
+        public static List<Integer> readIntArray(final int n) {
+            return Stream.of(new Integer[n]).map(_ -> scan.nextInt()).collect(toList());
         }
 }
 
     class BetweenTwoSets {
-        private List<Integer> setA, setB, potentialFactors;
+        private final List<Integer> setA;
+        private final List<Integer> setB;
+        private final List<Integer> potentialFactors;
         private int factors;
 
         public BetweenTwoSets(List<Integer> setA, List<Integer> setB) {
-            this.setA = new ArrayList<Integer>(setA);
-            this.setB = new ArrayList<Integer>(setB);
-            potentialFactors = new ArrayList<Integer>();
+            this.setA = setA;
+            this.setB = setB;
+            potentialFactors = new ArrayList<>();
             factors = 0;
-
-            findFactors();
         }
 
-        private void findFactors() {
+        public void findFactors() {
             findNumbersDivisibleBySetA();
             findFactorsOfSetB();
             countFactors();
         }
 
             private void findNumbersDivisibleBySetA() {
-                int lastElementOfSetA = setA.get(setA.size() - 1);
-
-                for (int potentialFactor = lastElementOfSetA; potentialFactor <= setB.get(0); potentialFactor += lastElementOfSetA) {
+                for (int potentialFactor = setA.getLast(); potentialFactor <= setB.getFirst(); potentialFactor += setA.getLast()) {
                     boolean isARealPotentialFactor = true;
 
-                    for (int elementA : setA)
-                        if (potentialFactor % elementA != 0) {
+                    for (int x : setA)
+                        if (potentialFactor % x != 0) {
                             isARealPotentialFactor = false;
                             break;
                         }
@@ -68,14 +68,14 @@ public class Solution {
             }
 
             private void findFactorsOfSetB() {
-                for (int elementB : setB)
-                    for (int i = 0; i < potentialFactors.size(); i++)
-                        if (potentialFactors.get(i) != 0 && elementB % potentialFactors.get(i) != 0)
+                for (int x : setB)
+                    for (int i = 0; i < potentialFactors.size(); ++i)
+                        if (potentialFactors.get(i) != 0 && x % potentialFactors.get(i) != 0)
                             potentialFactors.set(i, 0);
             }
 
             private void countFactors() {
-                factors = potentialFactors.stream().reduce(0, (sum, item) -> item != 0 ? ++sum : sum);
+                factors = (int) potentialFactors.stream().filter(x -> x != 0).count();
             }
 
         public int totalFactors() {
